--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.12.2",
     "bootstrap": "^4.6.0",
+    "firebase": "^9.6.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
